Update mi-log library to version 1.0.1

--- a/test.html
+++ b/test.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>test of navLog</title>
-    <script src="./Mi-navlog.js"></script>
+    <script src="cdn.jsdelivr.net/npm/mi-log@1.0.1/Mi-navlog.js"></script>
 </head>
 <body>
     <h1>
