Add mi-log configuration file and update test.html and test.js

--- a/test.html
+++ b/test.html
@@ -4,25 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>test of navLog</title>
-    <script src="cdn.jsdelivr.net/npm/mi-log@1.0.1/Mi-navlog.js"></script>
+    <script src="log.js"></script>
 </head>
 <body>
-    <h1>
-        open the console to see the logs
-    </h1>
-    <script>
-        const navLog = new Log([{ style: 'circle', color: 'green', text: 'Log' }]);
-        navLog.l('Hello World');
-        navLog.w('Hello World');
-        navLog.e('Hello World');
-        navLog.i('Hello World');
-        navLog.d('Hello World');
-        navLog.c('Hello World');
-        navLog.show.l('Hello World');
-        navLog.show.w('Hello World');
-        navLog.show.e('Hello World');
-        navLog.show.i('Hello World');
-        navLog.show.d('Hello World');
-    </script>
+    <div id="test">OPEN A CONSOLE</div>
+    <script src="test.js"></script>
 </body>
 </html>
