--- a/demo.html
+++ b/demo.html
@@ -4,10 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>test of navLog</title>
-    <script src="log.js"></script>
+    <script src="mi-log.js"></script>
+    <!-- import mi-log from the file mi-log.js or cdn -->
 </head>
 <body>
     <div id="test">OPEN A CONSOLE</div>
-    <script src="test.js"></script>
+    <script src="demo.js"></script>
 </body>
 </html>
